Added Stop to GUI

--- a/SolvitaireGUI/Views/GeneticAlgorithmTabView.xaml
+++ b/SolvitaireGUI/Views/GeneticAlgorithmTabView.xaml
@@ -119,6 +119,13 @@
                                 Style="{StaticResource AlgorithmControlButtonStyle}" 
                                 Background="{StaticResource BlueAccentColor}" 
                                 Width="80" Margin="5"  />
+
+                        <!-- Stop Button -->
+                        <Button Content="Stop" 
+                                Command="{Binding StopCommand}" 
+                                Style="{StaticResource AlgorithmControlButtonStyle}" 
+                                Background="{StaticResource RedAccentColor}" 
+                                Width="80" Margin="5" />
                     </StackPanel>
                 </DockPanel>
             </Expander.Header>
