Bug fixes and cleanup from recent changes

--- a/SolvitaireGUI/Views/GeneticAlgorithmTabView.xaml
+++ b/SolvitaireGUI/Views/GeneticAlgorithmTabView.xaml
@@ -249,11 +249,11 @@
                             <ContentControl Content="{Binding Parameters}">
                                 <ContentControl.Resources>
                                     <DataTemplate
-                                        DataType="{x:Type solvitaireGenetics:SolitaireGeneticAlgorithmParameters}">
+                                        DataType="{x:Type local:SolitaireGeneticAlgorithmParametersViewModel}">
                                         <local:SolitaireGeneticParametersControl />
                                     </DataTemplate>
                                     <DataTemplate
-                                        DataType="{x:Type solvitaireGenetics:QuadraticGeneticAlgorithmParameters}">
+                                        DataType="{x:Type local:QuadraticGeneticAlgorithmParametersViewModel}">
                                         <local:QuadraticGeneticParametersControl />
                                     </DataTemplate>
                                 </ContentControl.Resources>
