--- a/SolvitaireGUI/Views/AgentPlayingView.xaml
+++ b/SolvitaireGUI/Views/AgentPlayingView.xaml
@@ -106,7 +106,7 @@
         </Grid>
 
         <ContentControl Grid.Column="1">
-            <local:GameStateView DataContext="{Binding GameStateViewModel}"/>
+            <local:GameStateView DataContext="{Binding SolitaireGameStateViewModel}"/>
         </ContentControl>
     </Grid>
 </UserControl>
