--- a/SolvitaireGUI/Views/GameStateInspectionView.xaml
+++ b/SolvitaireGUI/Views/GameStateInspectionView.xaml
@@ -64,7 +64,7 @@
         </Grid>
 
         <ContentControl Grid.Column="1" MinWidth="640">
-            <local:GameStateView DataContext="{Binding GameStateViewModel}"/>
+            <local:GameStateView DataContext="{Binding SolitaireGameStateViewModel}"/>
         </ContentControl>
     </Grid>
 </UserControl>
