--- a/SolvitaireGUI/Views/GameStateView.xaml
+++ b/SolvitaireGUI/Views/GameStateView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SolvitaireGUI"
              mc:Ignorable="d" 
-             d:DataContext="{x:Static local:GameStateModel.Instance}"
+             d:DataContext="{x:Static local:SolitaireGameStateModel.Instance}"
              d:DesignHeight="450" d:DesignWidth="800"
              MinWidth="640">
     <UserControl.ContextMenu>
