--- a/SolvitaireGUI/Views/ConnectFourPlayingView.xaml
+++ b/SolvitaireGUI/Views/ConnectFourPlayingView.xaml
@@ -28,19 +28,11 @@
             <RowDefinition Height="5*"/>
         </Grid.RowDefinitions>
 
-        <!-- Left Panel: Player 1 -->
-        <StackPanel Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
-            <TextBlock Text="Player 1" FontWeight="Bold" FontSize="18" Margin="0,0,0,10"/>
-            <ComboBox ItemsSource="{Binding AvailableAgents}" 
-                     SelectedItem="{Binding Player1Agent}" 
-                     DisplayMemberPath="Name"
-                     Margin="0,0,0,10"/>
-            <Button Content="Switch to Human" Command="{Binding SwitchPlayer1ToHumanCommand}" 
-                    Visibility="{Binding Player1Type, Converter={StaticResource PlayerTypeAgentModeToVisibilityConverter}}"/>
-            <Button Content="Switch to Agent" Command="{Binding SwitchPlayer2ToAgentCommand}" 
-                    Visibility="{Binding Player1Type, Converter={StaticResource PlayerTypeHumanModeToVisibilityConverter}}"/>
-            <!-- Additional agent settings can go here -->
-        </StackPanel>
+        <!-- Agent Panels -->
+        <local:AgentPanelView DataContext="{Binding Player1Panel}" 
+                              Grid.Column="0" Grid.Row="1"/>
+        <local:AgentPanelView DataContext="{Binding Player2Panel}" 
+                              Grid.Column="2" Grid.Row="1"/>
 
         <!-- Top Panel: Game Controls -->
         <Grid Grid.Row="0" Grid.Column="1"  >
@@ -90,19 +82,5 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
-
-        <!-- Right Panel: Player 2 -->
-        <StackPanel Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
-            <TextBlock Text="Player 2" FontWeight="Bold" FontSize="18" Margin="0,0,0,10"/>
-            <ComboBox ItemsSource="{Binding AvailableAgents}" 
-                  SelectedItem="{Binding Player2Agent}" 
-                  DisplayMemberPath="Name"
-                  Margin="0,0,0,10"/>
-            <Button Content="Switch to Human" Command="{Binding SwitchPlayer2ToHumanCommand}" 
-                    Visibility="{Binding Player2Type, Converter={StaticResource PlayerTypeAgentModeToVisibilityConverter}}"/>
-            <Button Content="Switch to Agent" Command="{Binding SwitchPlayer2ToAgentCommand}" 
-                    Visibility="{Binding Player2Type, Converter={StaticResource PlayerTypeHumanModeToVisibilityConverter}}"/>
-            <!-- Additional agent settings can go here -->
-        </StackPanel>
     </Grid>
 </UserControl>
